assets/css/style.css
/* ... */
  .count p, .s_project p {
    margin-top: 0.5em; }
    .count p .status, .s_project p .status {
      font-weight: bold; }
  .count img, .s_project img {
    -webkit-transition: all 80ms ease-in-out;
    -moz-transition: all 80ms ease-in-out;
    -ms-transition: all 80ms ease-in-out;
    -o-transition: all 80ms ease-in-out;
    transition: all 80ms ease-in-out;
    max-width: 100%;
    border-radius: 4px;
    box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.15); }

.s_project img {
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  max-width: 100%;
  border-radius: 4px;
  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.15); }
.s_project h4 {
  text-align: left; }
.s_project p {
  word-wrap: break-word;
  text-align: left;
  font-weight: 600; }

@media screen and (max-width: 480px) {
  .count, .s_project {
    display: block;
    float: left;
    margin-right: 4.82916%;
    width: 47.58542%; }
    .count:nth-child(2n), .s_project:nth-child(2n) {
      margin-right: 0; }
    .count:last-child, .s_project:last-child {
      margin-right: 0; } }
section {
  padding: 1em 0 1.5em;
  width: 100%;
  background: #00A79D; }
  section > div {
    padding-left: 20px;
    padding-right: 20px;
    *zoom: 1;
    max-width: 41.25em;
    margin-left: auto;
    margin-right: auto; }
    section > div:before, section > div:after {
      content: " ";
      display: table; }
    section > div:after {
      clear: both; }
  section h3 {
    font-size: 1.8em;
    color: white; }
    section h3 small {
      font-family: "proxima-nova", sans-serif;
      float: right;
      line-height: 1.5em;
      color: rgba(255, 255, 255, 0.75); }
  @media screen and (max-width: 480px) {
    section h3 {
      font-size: 2.3em; }
      section h3 small {
        font-weight: 600;
        margin: 0.6em 0 1em 0;
        font-size: 0.6em;
        display: block;
        float: left;
        text-align: left; } }

#social h4 {
  font-size: 1.3em;
  color: rgba(255, 255, 255, 0.8);
  width: 100%;
  position: relative; }
  #social h4 a {
    font-family: 'proxima-nova', sans-serif;
    font-weight: 700;
    right: 0;
    top: -0.5em;
    font-size: 0.7em;
    padding: 7px 10px;
    border-bottom: none;
    background: rgba(255, 255, 255, 0.75);
    color: #b95722;
    border-radius: 4px;
    -webkit-transition: all 100ms ease-in-out;
    -moz-transition: all 100ms ease-in-out;
    -ms-transition: all 100ms ease-in-out;
    -o-transition: all 100ms ease-in-out;
    transition: all 100ms ease-in-out;
    box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.2);
    position: absolute; }
    #social h4 a:hover, #social h4 a:focus {
      background: rgba(255, 255, 255, 0.9); }
    #social h4 a:active {
      top: -0.4em;
      box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2); }
@media screen and (max-width: 480px) {
  #social h4 {
    margin-bottom: 0.5em; } }

.mobile-link {
  display: none; }

@media screen and (max-width: 480px) {
  #social h4 {
    font-size: 1.8em; }
    #social h4 a {
      display: none; }
  #social .mobile-link {
    display: block;
    font-family: 'proxima-nova', sans-serif;
    font-weight: 700;
    font-size: 1em;
    text-align: center;
    padding: 7px 10px;
    border-bottom: none;
    background: rgba(255, 255, 255, 0.75);
    color: #b95722;
    border-radius: 4px;
    -webkit-transition: all 100ms ease-in-out;
    -moz-transition: all 100ms ease-in-out;
    -ms-transition: all 100ms ease-in-out;
    -o-transition: all 100ms ease-in-out;
    transition: all 100ms ease-in-out;
    box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.2); }

  #bookmarks {
    margin-bottom: 1em; } }
#dribbble, #flickr {
  *zoom: 1;
  max-width: 41.25em;
  margin-left: auto;
  margin-right: auto; }
  #dribbble:before, #dribbble:after, #flickr:before, #flickr:after {
    content: " ";
    display: table; }
  #dribbble:after, #flickr:after {
    clear: both; }
  #dribbble a, #flickr a {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 31.76157%;
    border-bottom: none; }
    #dribbble a:last-child, #flickr a:last-child {
      margin-right: 0; }
    #dribbble a:nth-child(3n), #flickr a:nth-child(3n) {
      margin-right: 0; }
    #dribbble a img, #flickr a img {
      max-width: 100%;
      border-radius: 5px;
      margin-bottom: 1em;
      box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.2);
      -webkit-transition: all 100ms ease-in-out;
      -moz-transition: all 100ms ease-in-out;
      -ms-transition: all 100ms ease-in-out;
      -o-transition: all 100ms ease-in-out;
      transition: all 100ms ease-in-out; }
    #dribbble a:hover img, #dribbble a:focus img, #flickr a:hover img, #flickr a:focus img {
      position: relative;
      top: -2px;
      box-shadow: 0px 6px 0px rgba(0, 0, 0, 0.35); }
    #dribbble a:active img, #flickr a:active img {
      top: 2px;
      box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.35); }

.preserve_wrap {
  *zoom: 1;
  max-width: 41.25em;
  margin-left: auto;
  margin-right: auto; }
  .preserve_wrap:before, .preserve_wrap:after {
    content: " ";
    display: table; }
  .preserve_wrap:after {
    clear: both; }
  .preserve_wrap #bookmarks {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 100%; }
    .preserve_wrap #bookmarks:last-child {
      margin-right: 0; }
    .preserve_wrap #bookmarks a {
      display: block;
      display: block;
      float: left;
      margin-right: 2.35765%;
      width: 48.82117%;
      padding: 10px;
      border-bottom: none;
      background: rgba(255, 255, 255, 0.1);
      margin: 0;
      height: 70px;
      overflow: hidden; }
      @media screen and (min-width: 480px) {
        .preserve_wrap #bookmarks a:nth-child(2n) {
          margin-right: 0; }
        .preserve_wrap #bookmarks a:nth-child(3n), .preserve_wrap #bookmarks a:nth-child(2) {
          background: rgba(255, 255, 255, 0.05); } }
/* ... */

